--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -3,8 +3,8 @@
 <table>
   <tr>
     <th>Title</th>
-    <th>Body</th>
-    <th></th>
+    <th>Url</th>
+    <th>Description</th>
     <th></th>
     <th></th>
   </tr>
@@ -12,10 +12,8 @@
 <% @news.each do |news| %>
   <tr>
     <td><%= news.title %></td>
-    <td><%= news.body %></td>
-    <td><%= link_to 'Show', news %></td>
-    <td><%= link_to 'Edit', edit_news_path(news) %></td>
-    <td><%= link_to 'Destroy', news, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= news.url %></td>
+    <td><%= news.description %></td>
   </tr>
 <% end %>
 </table>
