--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -1,46 +1,22 @@
-<div class="tab-content">
-	<div class="tab-pane active" id="home">
-		<div class="row-fluid">
-			<div class="span8 offset2">
-				<ul class="nav nav-tabs">
-					<li class="active">
-						<a href="#home" data-toggle="tab">Home</a>
-					</li>
-					<li>
-						<a href="#profile" data-toggle="tab">Profile</a>
-					</li>
-					<li>
-						<a href="#messages" data-toggle="tab">Messages</a>
-					</li>
-					<li>
-						<a href="#settings" data-toggle="tab">Settings</a>
-					</li>
-				</ul>
+<div class="row-fluid">
+	<div class="span8 offset2">
+		<ul class="nav nav-tabs">
+			<li class="active">
+				<a href="#free" data-toggle="tab">無料</a>
+			</li>
+			<li>
+				<a href="#paid" data-toggle="tab">有料</a>
+			</li>
+		</ul>
 
-				<table class="table table-striped">
-					<% @rankings.news.each do |news| %>
-					<tr>
-						<td><%= image_tag(news.get_changerank_icon,:size=>"60x60") %></td>
-						<td><%= news.rank %>位</td>
-						<td><%= image_tag (news.thumbnail_url) %></td>
-						<td><%= link_to news.title, news.url %></td>
-						<td><%= news.description %></td>
-					</tr>
-					<% end %>
-				</table>
+		<div class="tab-content">
+			<div class="tab-pane active" id="free">
+				<%= render 'ranking_contents' ,:rankings => @rankings_free%>
+			</div>
+			<div class="tab-pane" id="paid">
+				<%= render 'ranking_contents' ,:rankings => @rankings_paid%>
 			</div>
 		</div>
 	</div>
-	<div class="tab-pane" id="profile">
-		fuga
-	</div>
-	<div class="tab-pane" id="messages">
-		jya
-	</div>
-	<div class="tab-pane" id="settings">
-		...
-	</div>
 </div>
-
-<br />
 
