--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,12 @@
   <title>Androidrss</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+      <!-- <script src="../src/js/calender/jscal2.js"></script>
+    <script src="../src/js/calender/lang/en.js"></script>
+    <link rel="stylesheet" type="text/css" href="../src/css/calender/jscal2.css" />
+    <link rel="stylesheet" type="text/css" href="../src/css/calender/border-radius.css" />
+    <link rel="stylesheet" type="text/css" href="../src/css/calender/steel/steel.css" /> -->
+  
   <%= csrf_meta_tags %>
 </head>
 <body>
