--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Androidrss</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-      <!-- <script src="../src/js/calender/jscal2.js"></script>
-    <script src="../src/js/calender/lang/en.js"></script>
-    <link rel="stylesheet" type="text/css" href="../src/css/calender/jscal2.css" />
-    <link rel="stylesheet" type="text/css" href="../src/css/calender/border-radius.css" />
-    <link rel="stylesheet" type="text/css" href="../src/css/calender/steel/steel.css" /> -->
-  
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<header>
-	<%= image_tag("CoplandOs_Icon.png") %>
-</header>
-<%= yield %>
+	<head>
+		<title>Androidrss</title>
+		<%= stylesheet_link_tag    "application", :media => "all" %>
+		<%= javascript_include_tag "application" %>
+		<%= csrf_meta_tags %>
+		
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+	</head>
+	<body>
+		<header>
+			<div class="navbar navbar-fixed-top navbar-inverse">
+				<div class="navbar-inner">
+					<ul class="nav pull-left">
+						<li>
+							<%= image_tag("CoplandOs_Icon.png",:size => "35x35") %>
+						</li>
+					</ul>
+					
+					<ul class="nav pull-right">
+						<li>
+							<a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja" data-size="large">ツイート</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 
-</body>
+			
+		</header>
+		<%= yield %>
+
+	</body>
 </html>
